fix mobile overflow issues

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 * {
   padding: 0;
   margin: 0;
+  overflow: hidden;
 }
 
 html,
@@ -10,6 +11,11 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
+  overflow: hidden;
+}
+
+#canvas {
+  overflow: hidden;
 }
 
 /* COCK PIT */
